Aligned the feedback form and corrected an error in thanks.html

--- a/static/view.css
+++ b/static/view.css
@@ -44,7 +44,7 @@
 
 .container-fluid form.appnitro
 {
-	margin:20px 20px 0;
+	margin-top:20px;
 	padding:0 0 20px;
 }
 
